--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <script src="constants.js"></script>
-    <script src="Charakter.js"></script>
+    <script src="Character.js"></script>
+    <script src="Record.js"></script>
     <script src="Obstacle.js"></script>
     <script src="Background.js"></script>
     <script src="Game.js"></script>
