with game over screens

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <style>* {margin:0; padding:0}</style>
 </head>
 <body>
+    <!--<button>START</button>-->
     <script src="constants.js"></script>
     <script src="Character.js"></script>
     <script src="Record.js"></script>
     <script src="Obstacle.js"></script>
     <script src="Background.js"></script>
+    <script src="EndGame.js"></script>
     <script src="Game.js"></script>
     <script src="main.js"></script>
 </body>
