--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Can you DJ game</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
+    <!--<script src="path/to/p5.sound.js"></script>-->
     <style>* {margin:0; padding:0}</style>
 </head>
 <body>
-    <!--<button>START</button>-->
+    <div class="landingPage">
+    <h1>Can you DJ the night?</h1>
+    <h2>Collect the records and avoid being caught by the decks.</h2>
+    <h2>Press "space" to jump.</h2>
+    <button class="startButton">START</button>
+    </div>
     <script src="constants.js"></script>
     <script src="Character.js"></script>
     <script src="Record.js"></script>
