--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Can you DJ game</title>
     <link rel="stylesheet" href="./styles/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
-    <!--<script src="path/to/p5.sound.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.js"></script>
     <style>* {margin:0; padding:0}</style>
 </head>
 <body>
