level2 text added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="landingPage">
     <h1>Can you DJ the night?</h1>
-    <h2>Collect the records and avoid being caught by the decks.</h2>
-    <h3>Try to get 8 records per level to be a superstar DJ.</h3>
+    <h2>Collect the records and dodge the decks.</h2>
+    <h3>Get 8 records per level to be a superstar DJ.</h3>
     <h2 id="pressButtonInfo">Press "space" to jump.</h2>
     <button class="startButton">START</button>
     </div>
